<resources>
    <string name="app_name">Meu Aniversário</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="feliz_65_anos">Meus 65 anos!</string>
    <string name="fotos">fotos  do aniversariante</string>
    <string name="local">Localização da Festa: Praça das Águas dia 23 de Dezembro</string>
    <string name="mapa">mapa do local</string>
    <string name="botao_local">Confira o local no mapa</string>
    <string name="autora">Desenvolvido por Erica Camila Silva Cunha</string>

    <string name="c_lculo_de_comes_e_bebes">Cálculo de comes e bebes</string>
    <string name="controle_de_gastos">Controle de gastos</string>
    <string name="lista_de_convidados">Lista de convidados</string>
    <string name="sobre">Sobre</string>
    <string name="aplicativo_meu_anivers_rio">Aplicativo \n "Meu Aniversário"</string>
    <string name="versao">Versão 3.0</string>
</resources>