<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Nova.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Nova.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textVTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/feliz_65_anos"
                android:textAlignment="center"
                android:textColor="#191970"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botao_local"
                android:onClick="sendMap"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i3" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i4" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i7" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i9" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i10" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i11" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i12" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i13" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="404dp"
                    android:layout_height="272dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/fotos"
                    app:srcCompat="@drawable/i14" />

            </TableLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/autora" />

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>